	- support a custom name for getter / setter #9
	
0.0.7 - 2014-02-01
  - add min version of ruby should be 2.0.x

0.0.6 - 2014-02-01
  - fix bug when extends subclass, now it is safe #18
  - required attr with default value will no longer throw exception #30
  - supports handles for: single method, array, Class or Module #27

0.0.5 - 2014-01-31
	- should support handles #13 (partial)

0.0.4 - 2014-01-31
	- fix an issue related to ruby > 1.9.2

0.0.3 - 2014-01-31
	- add support to clearer #26
	- add support to predicate #11
	- add support to handle more than one attribute #2
	- small improvements

0.0.2 - 2014-01-31
	- fix one important bug, not it is possible use in more than one class
	- add require option
	- supports :ro, :rw, :rwp ( read-only, read-write and read-write-private) options
	- supports default value as lambda or constant
	- supports isa as class/module name or lambda

0.0.1 - 2014-01-31
	- first release